kubernetes-deployments/ingress/traefik/05_service.yml
# Declare Traefik ingress service
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-controller
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.us-west1-a.securethebox.us
spec:
  selector:
    app: traefik-ingress-controller
  ports:
    - port: 80
      name: http
      targetPort: 8080
    - port: 443
      name: https
      targetPort: 8080
    - port: 8080
      name: admin
  type: LoadBalancer
