kubernetes-deployments/ingress/traefik/06_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-controller
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: traefik.us-west1-a.securethebox.us
spec:
  tls:
  - hosts:
    - traefik.us-west1-a.securethebox.us
    secretName: traefik-ui-tls-cert
  rules:
    - host: traefik.us-west1-a.securethebox.us
      http:
        paths:
        - path: /
          backend:
            serviceName: traefik-ingress-controller
            servicePort: admin
  # rules:
  #   - host: traefik.us-west1-a.securethebox.us
  #     http:
  #       paths:
  #       - path: /
  #         backend:
  #           serviceName: traefik-ingress-controller
  #           servicePort: admin
  # tls:
  # - secretName: traefik-ui-tls-cert

# tls:
#   - hosts:
#     - sslexample.foo.com
#     secretName: testsecret-tls
#   rules:
#     - host: sslexample.foo.com
#       http:
#         paths:
#         - path: /
#           backend:
#             serviceName: service1
#             servicePort: 80
